# zmk-config

./: .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  README.md  TODO.md  build.yaml  entrypoint.sh  requirements.txt
config/: corne.conf  corne.keymap  corne_dongle.conf  lily58.conf  west.yml
config/layout/: specialkeys.dtsi  standard_layout.dtsi
config/modules/ecaps-word/: CMakeLists.txt
config/modules/ecaps-word/dts/bindings/behaviors/: zmk,behavior-ecaps-word.yaml
config/modules/ecaps-word/src/: behavior_ecaps_word.c
config/modules/ecaps-word/zephyr/: module.yml
dts/bindings/behaviors/: zmk,behavior-ecaps-word.yaml
modules/ecaps-word/: Kconfig
scripts/: extract-zephyr-bindings.sh  flash.sh
src/: behavior_ecaps_word.c
zephyr/: module.yml
